columns show misalignment when long task added fixed - again

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -309,7 +309,7 @@ div.table-title {
   margin-right: 50px;
   margin-bottom: 10px;
   display: inline-block;
-  /*border-spacing: 10px 0px;*/
+  border-spacing: 0;
   text-align: center;
 }
 
